apps/anisette/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anisette
  namespace: halo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anisette
  template:
    metadata:
      labels:
        app: anisette
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: anisette
          image: dadoum/anisette-v3-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6969
          volumeMounts:
            - mountPath: /home/Alcoholic/.config/anisette-v3/lib
              name: anisette-lib
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
        - name: server-list
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: server-list-json
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "32Mi"
      volumes:
        - name: anisette-lib
          emptyDir: {}
        - name: server-list-json
          configMap:
            name: anisette-server-list
