apps/anisette/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anisette
  namespace: halo
spec:
  selector:
    app: anisette
  ports:
    - name: anisette
      port: 6969
      targetPort: 6969
      protocol: TCP
    - name: server-list
      port: 80
      targetPort: 80
      protocol: TCP
