apps/anisette/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anisette
  namespace: halo
spec:
  ingressClassName: nginx
  rules:
    - host: anisette.halo.fabseit.net
      http:
        paths:
          - path: /servers.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: anisette
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anisette
                port:
                  number: 6969
    - host: anisette.fabseit.net
      http:
        paths:
          - path: /servers.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: anisette
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anisette
                port:
                  number: 6969
  tls:
    - hosts:
        - anisette.halo.fabseit.net
        - anisette.fabseit.net
      secretName: local-fabseit-net-prod-tls
